# B1Env

./: MANIFEST.in  README.md  b1_env.py  hello_world.py  setup.cfg
B1Env/: __init__.py  b1_env.py  b1_sdk_api.py  b1wrapper.py  config.py  fixed_base_read_state.py  hello_world.py
B1Env/com_velocity_planner/: com_velocity.py  config.py
B1Env/gait_planner/: config.py  gait_planner.py
B1Env/mpc/: controller.py  utils.py
B1Env/robots/: b1_mesh_collide.urdf  b1_raw.urdf
B1Env/robots/meshes/xacro/: leg_mesh_collision.xacro
docs/source/: conf.py  index.md
docs/source/B1Env/: b1_env.md  index.md  mpc.md
docs/source/notebooks/: GaitPlots.ipynb  index.md
docs/source/quadruped/: gait_planner.md  index.md  mpc.md
robots/: b1_box_collide.urdf  b1_mesh_collide.urdf
robots/meshes/xacro/: leg.xacro  robot.xacro  robot_mesh_collision.xacro
