[metadata]
name = B1Env
version = 1.0.0
description = A Simulator for Unitree B1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BolunDai0216/B1Env
author = Bolun Dai
author_email = bd1555@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22.3
    scipy==1.8.0
    pybullet==3.2.5
    gymnasium==0.26.3

[options.extras_require]
doc = 
    sphinx==4.2.0
    myst-parser
    furo
    nbsphinx
    sphinx_book_theme
    sphinx-autobuild
    sphinx-autoapi


[options.entry_points]
console_scripts =
    b1env-hello-world = B1Env.hello_world:main